Fixed subtitle blocker appearing in the wrong position.

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 	width: 853px;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
 }
 
 .buttons {
